# bsdeploy

./: Cargo.toml  MIT-LICENSE  README.md
docs/: CODEBASE_ANALYSIS.md  DESIGN.md  FREEBSD_DEPLOY_DESIGN.md  PLAN.md  PLAN_CADDY.md  PLAN_JAILS.md  PLAN_MISE.md  PLAN_RESTART.md  PLAN_ZFS.md
examples/app1/: app.rb
examples/app1/config/: bsdeploy.yml
examples/app2/: app.rb  bsdeploy.yml
examples/app2/config/: bsdeploy.yml
src/: caddy.rs  config.rs  constants.rs  image.rs  jail.rs  main.rs  rcd.rs  remote.rs  shell.rs  ui.rs
src/commands/: deploy.rs  destroy.rs  init.rs  mod.rs  setup.rs  status.rs
