[package]
name = "bsdeploy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
