[package]
name = "bsdeploy"
version = "0.1.1"
edition = "2024"
authors = ["Robin Brandt <robin@evernet2000.de>"]
description = "A deployment tool to FreeBSD servers using jails."
license = "MIT"
repository = "https://github.com/robinbrandt/bsdeploy"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
hex = "0.4.3"
indicatif = "0.18.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
